feat: add .pdf/html/http/https/.docx/.pptx/.xlsx/.md/.txt file type supports for load_and_split_document
